--- a/#src/scss/blocks/_content.scss
+++ b/#src/scss/blocks/_content.scss
@@ -1,4 +1,5 @@
 .content {
+    padding-bottom: 51px;
     background-image: url('../images/bg.png');
     background-size: cover;
     background-position: top center;
