--- a/#src/scss/_base.scss
+++ b/#src/scss/_base.scss
@@ -1,3 +1,25 @@
+.overlay_menu {
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: #000;
+    opacity: 0.5;
+}
+
+.overlay_menu.visible {
+    display: block;
+}
+
+.noscroll {
+    overflow: hidden !important;
+}
+
 .btn {
     padding: 6px 36px;
     text-transform: uppercase;
@@ -87,4 +109,60 @@
             ;
         }
     }
+}
+
+.mobile__menu {
+    position: absolute;
+    padding: 114px 50px 114px 24px;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #d0aa8c;
+    z-index: 10;
+    transition: all .4s ease-in-out;
+    transform: translateX(-100%);
+
+    @media (min-width: 768px) {
+        width: 100%;
+        transform: translateY(-100%);
+    }
+
+    @media (min-width: 1200px) {
+        display: none;
+    }
+
+    .mobile__nav {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-bottom: 40px;
+        padding-bottom: 33px;
+        border-bottom: 1px solid rgba(255, 255, 255, .25);
+
+        a {
+            color: white;
+            font-weight: 500;
+            font-size: 15px;
+            line-height: 17px;
+            text-transform: uppercase;
+
+            &:not(:last-child) {
+                margin-bottom: 35px;
+            }
+        }
+
+        &__phone {
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 18px;
+        }
+    }
+
+}
+
+.mobile__menu.active {
+    transform: translateX(0);
 }
