--- a/#src/scss/blocks/_footer.scss
+++ b/#src/scss/blocks/_footer.scss
@@ -26,6 +26,7 @@
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
+        margin-bottom: 49px;
 
         @media (min-width: 768px) {
             flex-direction: row;
@@ -35,14 +36,12 @@
 
     &__col {
         position: relative;
-        padding-left: 15px;
-        padding-right: 15px;
+        margin-top: 15px;
 
         @media (min-width: 768px) {
             width: 45%;
             flex-wrap: wrap;
-            padding-left: auto;
-            padding-right: auto;
+            margin-top: auto;
         }
 
         @media (min-width: 1200px) {
@@ -56,7 +55,7 @@
             content: "";
             width: 1px;
             background-color: rgba($color:#fff, $alpha: 0.4);
-            bottom: 15%;
+            bottom: 0;
 
             @media (min-width: 1200px) {
                 display: block;
@@ -66,14 +65,14 @@
         &:first-child,
         &:nth-child(2) {
             &::before {
-                height: 50%;
+                height: 70%;
                 right: 0;
             }
         }
 
         &:nth-child(3) {
             &::before {
-                height: 80%;
+                height: 100%;
                 right: 0;
             }
         }
@@ -105,7 +104,6 @@
 
 
     &-nav {
-        margin-bottom: 49px;
         display: flex;
         flex-direction: column;
 
@@ -133,17 +131,16 @@
 
 
     &__links {
-        position: relative;
         display: flex;
         flex-direction: column;
         row-gap: 17px;
         z-index: 3;
-        margin-bottom: 17px;
+        margin-bottom: 16px;
     }
 
     &__link {
         display: block;
-        padding: 8px 19px;
+        padding: 0px 19px 8px;
         color: #ffffff;
         font-size: 17px;
         font-weight: 500;
@@ -163,7 +160,7 @@
 
     &__contacts {
         position: relative;
-        padding: 15px;
+        padding: 12px 18px;
 
 
         &::after {
