--- a/#src/scss/blocks/_footer.scss
+++ b/#src/scss/blocks/_footer.scss
@@ -23,6 +23,7 @@
         position: relative;
         z-index: 2;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
