--- a/#src/scss/blocks/_footer.scss
+++ b/#src/scss/blocks/_footer.scss
@@ -31,6 +31,10 @@
 
         @media (min-width: 768px) {
             flex-direction: row;
+            justify-content: space-around;
+        }
+
+        @media (min-width: 1200px) {
             justify-content: space-between;
         }
     }
@@ -132,6 +136,7 @@
 
 
     &__links {
+        max-width: 250px;
         display: flex;
         flex-direction: column;
         row-gap: 17px;
@@ -161,6 +166,7 @@
 
     &__contacts {
         position: relative;
+        max-width: 250px;
         padding: 12px 18px;
 
 
